# psychoroid.com

./: .cursorrules  .env.example  .env.exemple  .gitignore  LICENSE  README.md  SECURITY.md  components.json  index.html  javascript-beginner-guide.md  next.config.js  package-lock.json  package.json  sanity.config.ts  tailwind.config.js  text-to-cad-tutorial.txt  tsconfig.json  vercel.json
.next/: trace
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/api/: purchase.tsx
app/blog/: layout.tsx  page.tsx
app/cad/: page.tsx
app/community/: page.tsx
cad3dify/: pipeline.py  pyproject.toml
cad3dify/cad3dify/: pipeline.py
cad3dify/cad3dify/v1/: cad_code_generator.py
cad3dify/scripts/: text_cli.py
components/: ImagePreview.tsx  ImageUpload.tsx  Navbar.tsx  Product.tsx  ProductControls.tsx  ProductViewer.tsx  Scene.js  SignUpForm.tsx  TextInput.tsx  UserAuthForm.tsx
contexts/: UserContext.tsx
hooks/: use-cad-chat.ts
lib/: fetch.js  huggingface.ts  setup-draco.js  stripe.ts  supabase.ts
public/: manifest.json  robots.txt  sitemap.xml
sanity/: env.ts  structure.ts
scripts/: generate_sitemap.py  upload-default-model.js
src/: App.tsx
supabase/: config.toml  seed.sql
types/: api.d.ts  community.d.ts  community.ts  components.d.ts  draco3d.d.ts  env.d.ts  fal.d.ts  fbx2gltf.d.ts  gltf-pipeline.d.ts  gltf-transform.d.ts  models.d.ts  obj2gltf.d.ts  product.d.ts  stripe.d.ts
(+400 files in other folders)
